@@ -38,7 +38,8 @@ using the provided 'sstableupgrade' tool.
 
 New features
 ------------
-    - The data of the system keyspaces using a local strategy (at the exception of the system.paxos table)
+    - The data of the system keyspaces using a local strategy (at the exception of the system.batches,
+      system.paxos, system.compaction_history, system.prepared_statements and system.repair tables)
       is now stored by default in the first data directory. This approach will allow the server
       to tolerate the failure of the other disks. To ensure that a disk failure will not bring
       a node down, it is possible to use the system_data_file_directory yaml property to store
